# samd21g18a.rs

./: Cargo.toml  README.md  TODO.md
src/: ac.rs  adc.rs  dac.rs  dmac.rs  dsu.rs  eic.rs  evsys.rs  gclk.rs  i2s.rs  interrupt.rs  lib.rs  mtb.rs  nvmctrl.rs  pac0.rs  pm.rs  port.rs  sysctrl.rs  tcc0.rs  wdt.rs
